added links and made 'the pandevs' section' reponsive

--- a/index.html
+++ b/index.html
@@ -136,45 +136,27 @@
                                     </div>
                                 </div>
 
-                                <div class="row pandevs-social-links-div">
+                                <div class="row mt-1 mb-1 pandevs-social-links-div">
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-6 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://github.com/Aashish0204" target="_blank"
+                                            aria-label="github" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
                                                 data-icon="ant-design:github-filled" data-width="25"
                                                 data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-6 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://www.linkedin.com/in/ashish-kumar-maurya-575883245/" target="_blank" aria-label="linkedin"
                                             data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
+                                            <span class="iconify iconify-redirect-icon" data-icon="mdi:linkedin"
                                                 data-width="25" data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon"
-                                                data-icon="ant-design:github-filled" data-width="25"
-                                                data-height="25"></span>
-                                        </a>
-                                    </div>
-
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
-                                            data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
-                                                data-width="25" data-height="25"></span>
-                                        </a>
-                                    </div>
                                 </div>
 
                             </div>
@@ -205,42 +187,32 @@
                                     </div>
                                 </div>
 
-                                <div class="row pandevs-social-links-div">
+                                <div class="row mt-1 mb-1 pandevs-social-links-div">
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://github.com/Rane-Aditya" target="_blank"
+                                            aria-label="github" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
                                                 data-icon="ant-design:github-filled" data-width="25"
                                                 data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://www.linkedin.com/in/aditya-rane-2623b417b/" target="_blank" aria-label="linkedin"
                                             data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
+                                            <span class="iconify iconify-redirect-icon" data-icon="mdi:linkedin"
                                                 data-width="25" data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon"
-                                                data-icon="ant-design:github-filled" data-width="25"
-                                                data-height="25"></span>
-                                        </a>
-                                    </div>
-
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://www.instagram.com/rane_aditya_/" target="_blank" aria-label="instagram"
                                             data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
+                                            <span class="iconify iconify-redirect-icon" data-icon="ri:instagram-line"
                                                 data-width="25" data-height="25"></span>
                                         </a>
                                     </div>
@@ -273,12 +245,12 @@
                                         </h5>
                                     </div>
                                 </div>
-                                <div class="row pandevs-social-links-div">
+                                <div class="row mt-1 mb-1 pandevs-social-links-div">
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://github.com/BorisEdison/" target="_blank"
+                                            aria-label="github" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
                                                 data-icon="ant-design:github-filled" data-width="25"
                                                 data-height="25"></span>
@@ -287,26 +259,26 @@
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://www.linkedin.com/in/borisedison/" target="_blank" aria-label="linkedin"
                                             data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
+                                            <span class="iconify iconify-redirect-icon" data-icon="mdi:linkedin"
                                                 data-width="25" data-height="25"></span>
                                         </a>
                                     </div>
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://www.instagram.com/_boris_edison_/" target="_blank"
+                                            aria-label="instagram" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
-                                                data-icon="ant-design:github-filled" data-width="25"
+                                                data-icon="ri:instagram-line" data-width="25"
                                                 data-height="25"></span>
                                         </a>
                                     </div>
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://borisedison.in/" target="_blank" aria-label="portfolio"
                                             data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
                                                 data-width="25" data-height="25"></span>
@@ -341,45 +313,36 @@
                                         </h5>
                                     </div>
                                 </div>
-                                <div class="row pandevs-social-links-div">
+                                <div class="row mt-1 mb-1 pandevs-social-links-div">
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://github.com/rohansingh2023" target="_blank"
+                                            aria-label="github" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
                                                 data-icon="ant-design:github-filled" data-width="25"
                                                 data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://www.linkedin.com/in/rohan-singh-0b41a81b2/" target="_blank" aria-label="linked"
                                             data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
+                                            <span class="iconify iconify-redirect-icon" data-icon="mdi:linkedin"
                                                 data-width="25" data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://www.instagram.com/rohan_2023/" target="_blank"
+                                            aria-label="instagram" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
-                                                data-icon="ant-design:github-filled" data-width="25"
+                                                data-icon="ri:instagram-line" data-width="25"
                                                 data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
-                                            data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
-                                                data-width="25" data-height="25"></span>
-                                        </a>
-                                    </div>
                                 </div>
 
                             </div>
@@ -408,45 +371,27 @@
                                         </h5>
                                     </div>
                                 </div>
-                                <div class="row pandevs-social-links-div">
+                                <div class="row mt-1 mb-1 pandevs-social-links-div">
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-6 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
+                                        <a href="https://github.com/Cpytho" target="_blank"
+                                            aria-label="github" data-balloon-pos="up">
                                             <span class="iconify iconify-redirect-icon"
                                                 data-icon="ant-design:github-filled" data-width="25"
                                                 data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
+                                    <div class="col-6 d-flex justify-content-center align-items-center">
 
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
+                                        <a href="https://www.linkedin.com/in/shivendra-pandey-swe/" target="_blank" aria-label="linked"
                                             data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
+                                            <span class="iconify iconify-redirect-icon" data-icon="mdi:linkedin"
                                                 data-width="25" data-height="25"></span>
                                         </a>
                                     </div>
 
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://github.com/BorisEdison/MPT" target="_blank"
-                                            aria-label="Source Code" data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon"
-                                                data-icon="ant-design:github-filled" data-width="25"
-                                                data-height="25"></span>
-                                        </a>
-                                    </div>
-
-                                    <div class="col-3 d-flex justify-content-center align-items-center">
-
-                                        <a href="https://mpt.borisedison.in/" target="_blank" aria-label="Live Project"
-                                            data-balloon-pos="up">
-                                            <span class="iconify iconify-redirect-icon" data-icon="charm:link-external"
-                                                data-width="25" data-height="25"></span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
 
@@ -500,7 +445,7 @@
                                                 data-height="45"></span>
                                         </a>
         
-                                        <a class="social-links" href="https://www.linkedin.com/in/borisedison/"
+                                        <a class="social-links" href="https://www.linkedin.com/company/pandevs-org/"
                                             aria-label="linkedin link" target="_blank">
                                             <span class="iconify social-links-logo" data-icon="mdi:linkedin" data-width="45"
                                                 data-height="45"></span>
@@ -512,7 +457,7 @@
                                                 data-width="45" data-height="45"></span>
                                         </a>
         
-                                        <a class="social-links" href="https://www.instagram.com/_boris_edison_/"
+                                        <a class="social-links" href="https://www.instagram.com/pandevs_org?igsh=NGs5anF1eGpzdnpn"
                                             aria-label="instagram link" target="_blank">
                                             <span class="iconify social-links-logo" data-icon="ri:instagram-line"
                                                 data-width="45" data-height="45"></span>
