--- a/index.html
+++ b/index.html
@@ -410,87 +410,88 @@
             <div class="content content-secondary">
                 <h3 class="section-heading mt-3">The Pandava Code</h3>
 
-                    <div class="col-lg-12 timeline-wrapper mt-5">
-                        <ul class="timeline">
-                            <li>
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="./assets/images/sword-1.png" alt="">
+                <div class="col-lg-12 timeline-wrapper mt-5">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./assets/images/sword-1.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="section-sub-heading">Humility in Excellence</h4>
                                 </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4 class="section-sub-heading">Humility in Excellence</h4>
-                                    </div>
-                                    <div class="timeline-body timeline-body-normal">
-                                        <p class="timeline-body-text">True greatness lies in staying humble, no matter
-                                            how talented or accomplished you are</p>
-                                    </div>
+                                <div class="timeline-body timeline-body-normal">
+                                    <p class="timeline-body-text">True greatness lies in staying humble, no matter
+                                        how talented or accomplished you are</p>
                                 </div>
-                            </li>
-                            <li class="timeline-inverted">
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="./assets/images/mace.png" alt="">
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./assets/images/mace.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="section-sub-heading">Strength in Protecting Others</h4>
                                 </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4 class="section-sub-heading">Strength in Protecting Others</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="timeline-body-text">True strength lies in using your power responsibly
-                                            to safeguard and support others</p>
-                                    </div>
+                                <div class="timeline-body">
+                                    <p class="timeline-body-text">True strength lies in using your power responsibly
+                                        to safeguard and support others</p>
                                 </div>
-                            </li>
-                            <li>
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="./assets/images/spear.png" alt="">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./assets/images/spear.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="section-sub-heading">Commitment to Truth</h4>
                                 </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4 class="section-sub-heading">Commitment to Truth</h4>
-                                    </div>
-                                    <div class="timeline-body timeline-body-normal">
-                                        <p class="timeline-body-text">Integrity and a commitment to truth are the
-                                            foundations of trust and lasting leadership</p>
-                                    </div>
+                                <div class="timeline-body timeline-body-normal">
+                                    <p class="timeline-body-text">Integrity and a commitment to truth are the
+                                        foundations of trust and lasting leadership</p>
                                 </div>
-                            </li>
-                            <li class="timeline-inverted">
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" width="30" src="./assets/images/arrow.png" alt="">
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" width="30" src="./assets/images/arrow.png"
+                                    alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="section-sub-heading">Unwavering Focus on Goals</h4>
                                 </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4 class="section-sub-heading">Unwavering Focus on Goals</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="timeline-body-text">Success requires unwavering focus and
-                                            determination, keeping distractions and doubts at bay</p>
-                                    </div>
+                                <div class="timeline-body">
+                                    <p class="timeline-body-text">Success requires unwavering focus and
+                                        determination, keeping distractions and doubts at bay</p>
                                 </div>
-                            </li>
-                            <li>
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="./assets/images/sword-2.png" alt="">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./assets/images/sword-2.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="section-sub-heading">Wisdom in Silence</h4>
                                 </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4 class="section-sub-heading">Wisdom in Silence</h4>
-                                    </div>
-                                    <div class="timeline-body timeline-body-normal">
-                                        <p class="timeline-body-text">True wisdom lies in knowing when to speak and when
-                                            to remain silent, allowing actions and timing to convey their own power</p>
-                                    </div>
+                                <div class="timeline-body timeline-body-normal">
+                                    <p class="timeline-body-text">True wisdom lies in knowing when to speak and when
+                                        to remain silent, allowing actions and timing to convey their own power</p>
                                 </div>
-                            </li>
+                            </div>
+                        </li>
 
-                            <li>
-                                <div class="timeline-image d-flex align-items-center">
-                                    <p class="timeline-join-text mb-0">Join Our Quest!
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                        <li>
+                            <div class="timeline-image d-flex align-items-center">
+                                <p class="timeline-join-text mb-0">Join<br> Our<br> Quest!
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
