added quests section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/quests.css">
     <link rel="stylesheet" href="./css/the-pandevs.css">
     <link rel="stylesheet" href="./css/the-pandava-code.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -502,6 +503,48 @@
                 <h3 class="section-heading mt-3">Our Quests</h3>
 
                 <div class="row mb-5">
+
+                    <div class="col-lg-12 col-md-12 mt-5 p-0 col-sm-12  d-flex justify-content-center">
+                        <div class="quests-outer-div d-flex justify-content-center">
+                            <div class="card-body quests-div dharma-chakra-border p-1" data-aos="fade-up"
+                                data-aos-delay="100">
+
+                                <figure class="quests-figure">
+
+                                </figure>
+
+                                <div class="row pt-1">
+                                    <div class="col-6 d-flex align-items-center">
+                                        <h4 class="quests-heading mb-0">
+                                            Rumblesheet.JS
+                                        </h4>
+                                    </div>
+
+                                    <div class="col-6 d-flex justify-content-end">
+                                        <a href="https://github.com/pandevs-org/RumblesheetJS" target="_blank"
+                                            aria-label="Source Code" data-balloon-pos="up">
+                                            <span class="iconify quests-iconify-redirect-icon"
+                                                data-icon="ant-design:github-filled" data-width="35"
+                                                data-height="35"></span>
+                                        </a>
+                                        &nbsp;&nbsp;
+                                        <a href="https://rumblesheetjs.pandevs.org/" target="_blank" aria-label="Live Project"
+                                            data-balloon-pos="up">
+                                            <span class="iconify quests-iconify-redirect-icon"
+                                                data-icon="charm:link-external" data-width="35" data-height="35"></span>
+                                        </a>
+                                    </div>
+
+                                </div>
+
+                                <p class="quests-info mt-1 m-0">
+                                    A JavaScript library designed to seamlessly integrate dynamic, interactive
+                                    spreadsheets into any website for enhanced data management and visualization
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
