removed redundant code and replaced vh with dvh

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
                     <!-- boris -->
                     <div class="col-lg-4 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
                         <div class="pandevs-outer-div pandevs-shadow-top-right d-flex justify-content-center">
-                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
-                                data-aos-delay="200">
+                            <div class="card-body pandevs-div dharma-chakra-border">
 
                                 <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
@@ -187,8 +186,7 @@
                     <!-- aditya -->
                     <div class="col-lg-4 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
                         <div class="pandevs-outer-div pandevs-shadow-top-middle d-flex justify-content-center">
-                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
-                                data-aos-delay="200">
+                            <div class="card-body pandevs-div dharma-chakra-border">
 
                                 <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
@@ -248,8 +246,7 @@
                     <!-- rohan -->
                     <div class="col-lg-4 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
                         <div class="pandevs-outer-div pandevs-shadow-bottom-left d-flex justify-content-center">
-                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
-                                data-aos-delay="200">
+                            <div class="card-body pandevs-div dharma-chakra-border">
 
                                 <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
@@ -306,8 +303,7 @@
                     <!-- aashish -->
                     <div class="col-lg-6 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
                         <div class="pandevs-outer-div pandevs-shadow-top-left d-flex justify-content-center">
-                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
-                                data-aos-delay="200">
+                            <div class="card-body pandevs-div dharma-chakra-border">
 
                                 <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
@@ -356,8 +352,7 @@
                     <!-- shivendra -->
                     <div class="col-lg-6 col-md-12 mt-5 p-0 col-sm-12  d-flex justify-content-center">
                         <div class="pandevs-outer-div pandevs-shadow-bottom-right d-flex justify-content-center">
-                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
-                                data-aos-delay="200">
+                            <div class="card-body pandevs-div dharma-chakra-border">
 
                                 <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
@@ -418,7 +413,7 @@
                     <ul class="timeline">
 
                         <li>
-                            <div class="timeline-image">
+                            <div class="timeline-image" >
                                 <img class="img-circle img-responsive" src="./assets/images/spear.png" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -514,8 +509,7 @@
 
                     <div class="col-lg-12 col-md-12 mt-5 p-0 col-sm-12  d-flex justify-content-center">
                         <div class="quests-outer-div d-flex justify-content-center">
-                            <div class="card-body quests-div dharma-chakra-border p-1" data-aos="fade-up"
-                                data-aos-delay="100">
+                            <div class="card-body quests-div dharma-chakra-border p-1">
 
                                 <figure class="quests-figure">
 
