--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -636,10 +638,6 @@
     <!-- Bootstrap cdn-->
     <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- iconify -->
-    <script
-        src="https://code.iconify.design/2https://file+.vscode-resource.vscode-cdn.net/Users/borisedison/Desktop/pandevs.org-website/assets/borderSvgs/dharma-chakra.png?version%3D1730629480677/2.1.2/iconify.min.js"></script>
 
     <!-- iconify -->
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
