added sitemap.xml and robots.txt

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pandevs.org</title>
 
+    <meta name="description" content="At pandevs.org, we believe in the power of collaboration and purpose-driven technology to make a meaningful impact.">
+    
+    <meta name="keywords" content="open-source, pandevs.org, pandevsorg, pandevs org rumblesheetjs, rumblesheet.js, RumblesheetJS, Rumblesheet.JS, rumblesheet js,
+    Pandevs, Maha bharat, software development, coding community, developers, programming, tech collaboration, innovation, software engineering, 
+    Pandevs organization, web development, JavaScript, frontend, backend, full-stack">
+
     <link rel="stylesheet" href="./css/globals.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/navbar.css">
